<resources>
    <string name="app_name">School</string>
    <string name="app_version">version 1.0.0</string>

    <string name="menu_options">منو</string>
    <string name="menu_linkedin">LinkedIn</string>
    <string name="menu_instagram">Instagram</string>
    <string name="menu_googleplus">Google +</string>
    <string name="menu_website">Website</string>
    <string name="menu_exit">خروج</string>
    <string name="menu_sync">همگام سازی</string>
    <string name="menu_favorite">علاقمندی ها</string>
    <string name="menu_share">اشتراک گذاری</string>
    <string name="menu_download">دریافت</string>
    <string name="menu_aboutus">درباره ما</string>
    <string name="menu_introduce">آشنایی و تماس با مجموعه</string>
    <string name="menu_guid">راهنمای برنامه</string>
    <string name="menu_school_honor">افتخارات مدرسه</string>

    <string name="menu_save">ذخیره بروی دستگاه</string>
    <string name="error_invalid">معتبر نیست!</string>
    <string name="error_length">تعداد کاراکترها نامعتبر است.</string>
    <string name="error_empty">خالیست!</string>
    <string name="error_different">عدم تطابق!</string>
    <string name="error_internet">لطفا دستگاه خود را به اینترنت متصل کنید!</string>
    <string name="error_server">خطا از سرور! لطفا بعدا مجددا تلاش کنید.</string>
    <string name="error_permission">
        در صورت نپذیرفتن دسترسی شما نمیتوانید از برنامه استفاده کنید!! \n\n
        لطفا در تنظیمات گوشی قسمت دسترسی ها آن را فعال نمایید.
    </string>
    <string name="error_nework">تلاش برای اتصال به اینترنت</string>
    <string name="error_empty_list">لیست علاقمندی های شما خالیست!</string>
    <string name="title_activity_mosque">Map</string>


    <string name="prompt_password">پسورد فعلی</string>
    <string name="prompt_new_password">پسورد جدید</string>
    <string name="prompt_again_new_password">تکرار پسورد جدید</string>
    <string name="prompt_login">کلمه عبور</string>
    <string name="prompt_username">شناسه کاربری</string>
    <string name="sedaye_daneshamooz" >
        موسسه علمی دخترانه بعثت افتخار دارد از این پس با استفاده از درگاه الکترونیکی صدای داشن آموز، پذیرای هرگونه سوال، انتقادات، پیشنهادات و یا قدردانی شما اولیا و دانش آموزان گرامی باشد
        </string>

</resources>
