<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_aboutus"
        android:icon="@drawable/info_black"
        android:title="@string/menu_aboutus" />

    <item
        android:id="@+id/action_guide"
        android:icon="@drawable/live_help_black"
        android:title="@string/menu_guid" />

    <item
        android:id="@+id/action_contact_intro"
        android:icon="@drawable/people_black"
        android:title="@string/menu_introduce" />

    <item
        android:id="@+id/action_honor"
        android:icon="@drawable/iieftekharat"
        android:title="@string/menu_school_honor" />

    <item
        android:id="@+id/action_favorites"
        android:icon="@drawable/favblack"
        android:title="@string/menu_favorite" />

    <item
        android:id="@+id/action_exit"
        android:icon="@drawable/settings_power_black"
        android:title="@string/menu_exit" />

</menu>