<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true">

    <include
        android:id="@+id/toolbar_settings"
        layout="@layout/app_bar"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_10sdp"
        card_view:cardCornerRadius="@dimen/_5sdp"
        android:layout_margin="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitlePass_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_margin="@dimen/_10sdp"
                android:textColor="@color/V_Sormeii"
                android:text="تغییر رمز عبور :"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til1_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <EditText
                    android:id="@+id/edtOldPass_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:gravity="right" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til2_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <EditText
                    android:id="@+id/edtNewPass_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_new_password"
                    android:inputType="textPassword"
                    android:maxLength="11"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:gravity="right" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til3_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <EditText
                    android:id="@+id/edtAgainNewPass_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_again_new_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:gravity="right" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text=""
                android:layout_weight="1"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ثبت تغییرات"
                android:background="@drawable/shape_button_blue_lowopacity"
                android:id="@+id/btnConfirm_setting"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/TXTcolor"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>
